--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="assets/js/chart-rooms.js"></script>
+    <script type="text/javascript" src="assets/js/chart-earnings.js"></script>
     <title>Contintental - Admin Panel</title>
 </head>
 
@@ -51,12 +54,12 @@
         <div class="sidebar__options">
             <ul>
 
-                <li>
+                <li class="actual">
                     <a href="dashboard.html">
                         <div class="selector"></div><i class="fas fa-th-large"></i>Dashboard
                     </a>
                 </li>
-                <li class="actual">
+                <li>
                     <a href="employees.html">
                         <div class="selector"></div><i class="fas fa-users"></i>Employees
                     </a>
@@ -80,47 +83,56 @@
         </div>
     </div>
 
-    <!-- CONTENT EMPLOYEES START-->
-
+    <!-- CONTENT DASHBOARD START-->
     <div class="content">
-        <div class="employees">
-            <div class="header">
-                <div class="label">Employees Details</div>
-                <hr>
-                <div class="table-header">
-                    <div class="parameter center">USER</div>
-                    <div class="parameter">NAME</div>
-                    <div class="parameter">POSITION</div>
-                    <div class="parameter">PHONE</div>
-                    <div class="parameter">EMAIL</div>
-                    <div class="parameter center add"><i class="fas fa-plus-circle"></i></div>
+        <div class="dashboard">
+            <div class="widget">
+                <i class="fas fa-user-friends"></i>
+                <div class="data">
+                    <div class="label">Guest Users</div>
+                    <div class="value">512</div>
                 </div>
             </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="fas fa-user-circle"></i></div>
-                <div class="value  name">Marius Axinte</div>
-                <div class="value">Manager</div>
-                <div class="value">+04717273764</div>
-                <div class="value">marius@continental.com</div>
-                <div class="value center edit"><i class="fas fa-pen"></i></div>
+            <div class="widget">
+                <i class="fas fa-users"></i>
+                <div class="data">
+                    <div class="label">Employees</div>
+                    <div class="value">28</div>
+                </div>
             </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="fas fa-user-circle"></i></div>
-                <div class="value  name">Marius Axinte</div>
-                <div class="value">Manager</div>
-                <div class="value">+04717273764</div>
-                <div class="value">marius@continental.com</div>
-                <div class="value center edit"><i class="fas fa-pen"></i></div>
+            <div class="widget">
+                <i class="fas fa-door-open"></i>
+                <div class="data">
+                    <div class="label">Rooms</div>
+                    <div class="value">54</div>
+                </div>
             </div>
-            <hr>
+            <div class="widget">
+                <i class="fas fa-euro-sign"></i>
+                <div class="data">
+                    <div class="label">Today's Earnings</div>
+                    <div class="value">2K</div>
+                </div>
+            </div>
+
+
+            <div class="chart">
+                <div class="chart-label">Daily Rooms Occupancy</div>
+                <div id="chart-rooms"></div>
+            </div>
+            <div class="chart">
+                <div class="chart-label">Monthly Earnings (€)</div>
+                <div id="chart-earnings"></div>
+            </div>
+
+
+
         </div>
 
         <footer>Continental &copy; 2021</footer>
     </div>
 
-    <!-- CONTENT EMPLOYEES END -->
+    <!-- CONTENT DASHBOARD END -->
 
 
 
