--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="login">
 
     <form class="box" action="dashboard.html" class="box">
-        <h1>Login</h1>
+        <h1>Admin Login</h1>
         <input type="email" name="" placeholder="Email" spellcheck="false">
         <input type="password" name="" placeholder="Password">
         <input type="submit" name="" value="Login">
