--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
         </div>
         <div class="nav__right">
             <a href="#" class="settings"><i class="fas fa-cog"></i></a>
-            <a href="index.html"><i class="fas fa-sign-out-alt logout"></i></a>
+            <a href="index.html" class="logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
 
