--- a/employees.html
+++ b/employees.html
@@ -35,7 +35,7 @@
         </div>
         <div class="nav__right">
             <a href="#" class="settings"><i class="fas fa-cog"></i></a>
-            <a href="index.html"><i class="fas fa-sign-out-alt logout"></i></a>
+            <a href="index.html" class="logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
 
@@ -85,7 +85,7 @@
     <div class="content">
         <div class="employees">
             <div class="header">
-                <div class="label">Employees Details</div>
+                <div class="label">EMPLOYEES DETAILS</div>
                 <hr>
                 <div class="table-header">
                     <div class="parameter center">USER</div>
@@ -93,7 +93,8 @@
                     <div class="parameter">POSITION</div>
                     <div class="parameter">PHONE</div>
                     <div class="parameter">EMAIL</div>
-                    <div class="parameter center add"><i class="fas fa-plus-circle"></i></div>
+                    <div class="parameter center add"><button class="addEmployeeBtn"><i
+                                class="fas fa-plus-circle"></i></button></div>
                 </div>
             </div>
             <hr>
@@ -103,16 +104,7 @@
                 <div class="value">Manager</div>
                 <div class="value">+04717273764</div>
                 <div class="value">marius@continental.com</div>
-                <div class="value center edit"><i class="fas fa-pen"></i></div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="fas fa-user-circle"></i></div>
-                <div class="value  name">Marius Axinte</div>
-                <div class="value">Manager</div>
-                <div class="value">+04717273764</div>
-                <div class="value">marius@continental.com</div>
-                <div class="value center edit"><i class="fas fa-pen"></i></div>
+                <div class="value center edit"><button class="editEmployeeBtn"><i class="fas fa-pen"></i></button></div>
             </div>
             <hr>
         </div>
