--- a/employees.html
+++ b/employees.html
@@ -62,12 +62,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="rooms.html">
                         <div class="selector"></div><i class="fas fa-door-open"></i>Rooms
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="reservations.html">
                         <div class="selector"></div><i class="far fa-calendar-alt"></i>Reservations
                     </a>
                 </li>
