--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="login">
 
-    <form class="box" action="dashboard.html" class="box">
+    <form class="box" action="dashboard.html">
         <h1>Admin Login</h1>
         <input type="email" name="" placeholder="Email" spellcheck="false">
         <input type="password" name="" placeholder="Password">
