--- a/reservations.html
+++ b/reservations.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="emails.html">
                         <div class="selector"></div><i class="fas fa-envelope"></i>Emails
                     </a>
                 </li>
@@ -93,26 +93,25 @@
                     <div class="parameter">ROOM</div>
                     <div class="parameter">PRICE</div>
                     <div class="parameter">DATE</div>
-                    <!-- <div class="parameter center add"><button class="addRoomBtn"><i
-                                class="fas fa-plus-circle"></i></button></div> -->
                 </div>
             </div>
             <hr>
+
             <div class="table-row">
-                <div class="value center user"><i class="fas fa-door-open"></i></div>
+                <div class="value center user"><i class="far fa-calendar-check"></i></div>
                 <div class="value  name">Andrei Bogdan</div>
                 <div class="value">Room 2.1</div>
                 <div class="value">€150</div>
                 <div class="value short">01.05.2021 - 02.05.2021</div>
-                <!-- <div class="value center edit"><button class="editRoomBtn"><i class="fas fa-pen"></i></button></div> -->
             </div>
             <hr>
+
         </div>
 
         <footer>Continental &copy; 2021</footer>
     </div>
 
-    <!-- CONTENT EMPLOYEES END -->
+    <!-- CONTENT RESERVATIONS END -->
 
 
     <script src="assets/js/main.js"></script>
