--- a/rooms.html
+++ b/rooms.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="emails.html">
                         <div class="selector"></div><i class="fas fa-envelope"></i>Emails
                     </a>
                 </li>
