--- a/dashboard.html
+++ b/dashboard.html
@@ -37,9 +37,34 @@
             <img src="assets/img/logo_continental_2.png" alt="logo">
         </div>
         <div class="nav__right">
-            <a href="#" class="settings"><i class="fas fa-cog"></i></a>
+            <button class="settings"><i class="fas fa-cog"></i></button>
             <a href="index.html" class="logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
+    </div>
+
+    <!-- SETTINGS FORM -->
+    <div class="settings_form">
+        <form action="dashboard.html" id="modal_content">
+            <h1 class="settings_header">Account Settings</h1>
+            <div class="element">
+                <label for="name">Name</label>
+                <input type="text" value="Alex Popescu" spellcheck="false" placeholder="Enter new name here..."
+                    id="name">
+            </div>
+            <div class="element">
+                <label for="email">Email</label>
+                <input type="email" value="alex@contintental.com" spellcheck="false"
+                    placeholder="Enter new email here..." id="email">
+            </div>
+            <div class="element">
+                <label for="password">Password</label>
+                <input type="password" spellcheck="false" placeholder="Enter new password here..." id="password">
+            </div>
+            <div class="settings_footer">
+                <button class="cancelBtn" form="">Cancel</button>
+                <button type="update" form="modal_content" value="Submit">Update</button>
+            </div>
+        </form>
     </div>
 
     <!-- SIDEBAR -->
