--- a/employees.html
+++ b/employees.html
@@ -107,6 +107,44 @@
 
     <!-- CONTENT EMPLOYEES START-->
 
+
+    <!-- ADD EMPLOYEE FORM -->
+
+    <div class="add_employee_form">
+        <form action="#" id="modal_content2">
+            <h1 class="add_employee_header">Add Employee</h1>
+            <div class="element">
+                <label for="names">Name</label>
+                <input type="text" value="" spellcheck="false" placeholder="" id="names">
+            </div>
+            <div class="element">
+                <label for="position">Position</label>
+                <select name="positions" id="position">
+                    <option value="Manager">Manager</option>
+                    <option value="Administrator">Administrator</option>
+                    <option value="Accountant">Accountant</option>
+                    <option value="Housekeeper">Housekeeper</option>
+                </select>
+            </div>
+            <div class="element">
+                <label for="phone">Phone</label>
+                <input type="tel" value="" spellcheck="false" placeholder="" id="phone">
+            </div>
+            <div class="element">
+                <label for="emails">Email</label>
+                <input type="email" value="" spellcheck="false" placeholder="" id="emails">
+            </div>
+            <div class="element">
+                <label for="passwords">Password</label>
+                <input type="password" spellcheck="false" placeholder="" id="passwords">
+            </div>
+            <div class="add_employee_footer">
+                <button class="cancelBtn2" form="">Cancel</button>
+                <button type="update" form="modal_content2" value="Submit">Add</button>
+            </div>
+        </form>
+    </div>
+
     <div class="content">
         <div class="employees">
             <div class="header">
@@ -122,6 +160,9 @@
                                 class="fas fa-plus-circle"></i></button></div>
                 </div>
             </div>
+
+
+
             <hr>
             <div class="table-row">
                 <div class="value center user"><i class="fas fa-user-circle"></i></div>
