--- a/rooms.html
+++ b/rooms.html
@@ -44,18 +44,29 @@
         <form action="dashboard.html" id="modal_content">
             <h1 class="settings_header">Account Settings</h1>
             <div class="element">
-                <label for="name">Name</label>
-                <input type="text" value="Alex Popescu" spellcheck="false" placeholder="Enter new name here..."
-                    id="name">
+                <label for="name">Full Name</label>
+                <input type="text" value="Alex Popescu" spellcheck="false" placeholder="" id="name" required>
             </div>
             <div class="element">
                 <label for="email">Email</label>
-                <input type="email" value="alex@contintental.com" spellcheck="false"
-                    placeholder="Enter new email here..." id="email">
+                <input type="email" value="alex@contintental.com" spellcheck="false" placeholder="" id="email" required>
             </div>
             <div class="element">
-                <label for="password">Password</label>
-                <input type="password" spellcheck="false" placeholder="Enter new password here..." id="password">
+                <label for="phone1">Phone Number</label>
+                <input type="tel" pattern="[\d\+]{10,15}" required value="0733747474" spellcheck="false" placeholder=""
+                    id="phone1">
+            </div>
+            <div class="element">
+                <label for="password1">Password</label>
+                <input type="password" spellcheck="false" placeholder="" id="password1" required>
+            </div>
+            <div class="element">
+                <label for="password2">New Password</label>
+                <input type="password" spellcheck="false" placeholder="" id="password2">
+            </div>
+            <div class="element">
+                <label for="password3">Repeat New Password</label>
+                <input type="password" spellcheck="false" placeholder="" id="password3">
             </div>
             <div class="settings_footer">
                 <button class="cancelBtn" form="">Cancel</button>
