--- a/edit-employee.html
+++ b/edit-employee.html
@@ -92,7 +92,7 @@
                         <div class="selector"></div><i class="fas fa-th-large"></i>Dashboard
                     </a>
                 </li>
-                <li class="actual">
+                <li>
                     <a href="employees.html">
                         <div class="selector"></div><i class="fas fa-users"></i>Employees
                     </a>
@@ -116,17 +116,17 @@
         </div>
     </div>
 
-    <!-- CONTENT EMPLOYEES START-->
+    <!-- CONTENT EDIT-EMPLOYEE START-->
+    <div class="content">
 
+        <!-- EDIT EMPLOYEE FORM -->
 
-    <!-- ADD EMPLOYEE FORM -->
-
-    <div class="add_employee_form">
-        <form action="#" id="modal_content2">
-            <h1 class="add_employee_header">Add Employee</h1>
+        <form action="#" id="edit_employee_form">
+            <h1 class="edit_employee_header">Edit Employee Account</h1>
+            <hr>
             <div class="element">
                 <label for="names">Name</label>
-                <input type="text" value="" spellcheck="false" placeholder="" id="names">
+                <input type="text" value="" spellcheck="false" placeholder="" id="names" required>
             </div>
             <div class="element">
                 <label for="position">Position</label>
@@ -139,58 +139,27 @@
             </div>
             <div class="element">
                 <label for="phone">Phone</label>
-                <input type="tel" value="" spellcheck="false" placeholder="" id="phone">
+                <input type="tel" pattern="[\d\+]{10,15}" value="" spellcheck="false" placeholder="" id="phone"
+                    required>
             </div>
             <div class="element">
                 <label for="emails">Email</label>
-                <input type="email" value="" spellcheck="false" placeholder="" id="emails">
+                <input type="email" value="" spellcheck="false" placeholder="" id="emails" required>
             </div>
             <div class="element">
                 <label for="passwords">Password</label>
-                <input type="password" spellcheck="false" placeholder="" id="passwords">
+                <input type="password" spellcheck="false" placeholder="" id="passwords" required>
             </div>
-            <div class="add_employee_footer">
-                <button class="cancelBtn2" form="">Cancel</button>
-                <button type="update" form="modal_content2" value="Submit">Add</button>
+            <hr>
+            <div class="edit_employee_footer">
+                <!-- <button class="cancelBtn2" form="">Cancel</button> -->
+                <button type="update" form="edit_employee_form" value="Submit">Update</button>
             </div>
         </form>
-    </div>
-
-    <div class="content">
-        <div class="employees">
-            <div class="header">
-                <div class="label">EMPLOYEES DETAILS</div>
-                <hr>
-                <div class="table-header">
-                    <div class="parameter center">USER</div>
-                    <div class="parameter">NAME</div>
-                    <div class="parameter">POSITION</div>
-                    <div class="parameter">PHONE</div>
-                    <div class="parameter">EMAIL</div>
-                    <div class="parameter center add"><button class="addEmployeeBtn"><i
-                                class="fas fa-plus-circle"></i></button></div>
-                </div>
-            </div>
-
-
-
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="fas fa-user-circle"></i></div>
-                <div class="value  name">Marius Axinte</div>
-                <div class="value">Manager</div>
-                <div class="value">+04717273764</div>
-                <div class="value">marius@continental.com</div>
-                <div class="value center edit"><a href="edit-employee.html" class="editEmployeeBtn"><i
-                            class="fas fa-pen"></i></a></div>
-            </div>
-            <hr>
-        </div>
-
         <footer>Continental &copy; 2021</footer>
     </div>
 
-    <!-- CONTENT EMPLOYEES END -->
+    <!-- CONTENT EDIT-EMPLOYEE END -->
 
 
     <script src="assets/js/main.js"></script>
